@@ -34,6 +34,7 @@ S3method(lines, mboost)
 S3method(plot, survFit)
 S3method(coef, mboost)
 S3method(coef, glmboost)
+S3method(hatvalues, mboost)
 S3method(hatvalues, gamboost)
 S3method(hatvalues, glmboost)
 S3method(fitted, mboost)
